--- a/src/public/css/user/register.css
+++ b/src/public/css/user/register.css
@@ -43,7 +43,7 @@
 .form-group input:focus {
   outline: none;
   border-color: #000;
-  border: 2px solid #000
+  border: 2px solid #000;
 }
 
 .form__error {
