--- a/src/public/css/user/request-index.css
+++ b/src/public/css/user/request-index.css
@@ -56,10 +56,12 @@ body {
 .request-table th {
   background-color: #fff;
   font-weight: bold;
+  border-bottom: 2px solid #eee;
 }
 
 .request-table td {
   vertical-align: top;
+  border-bottom: 1px solid #eee;
 }
 
 .request-table tr {
